@@ -6,8 +6,8 @@ import time
 # flake8: noqa - we have a lot of locales and this is convenient
 from asm3.locales import *
 
-VERSION = "44u [Thu 24 Sep 08:52:02 BST 2020]"
-BUILD = "09240852"
+VERSION = "44u [Fri 25 Sep 12:05:42 BST 2020]"
+BUILD = "09251205"
 
 DMY = ( "%d/%m/%Y", "%d/%m/%y" )
 HDMY = ( "%d-%m-%Y", "%d-%m-%y" )
