@@ -773,15 +773,40 @@ $(function() {
             return [
                 '<div id="tab-email">',
                 '<table>',
+                '<tr><td>',
+                // inner
+                '<table>',
                 '<tr>',
-                '<td><label for="emailaddress">' + _("Email address") + '</label></td>',
+                '<td><label for="emailaddress">' + _("Email address") + '</label>',
+                '<span id="callout-emailaddress" class="asm-callout">' + _("This email address is the default From address when sending emails") + '</span>',
+                '</td>',
                 '<td><input data="EmailAddress" id="emailaddress" type="text" class="asm-doubletextbox" /></td>',
                 '</tr>',
-                '<tr>',
-                '<td><label for="emailsig">' + _("Email signature") + '</label></td>',
+                '</tr>',
+                '<td><label for="emailsig">' + _("Email signature") + '</label>',
+                '<span id="callout-emailsignature" class="asm-callout">' + _("This text will be added to the bottom of all send email dialogs") + '</span>',
+                '</td>',
                 '<td><div data="EmailSignature" id="emailsig" data-margin-top="24px" data-height="200px" data-width="380px" class="asm-richtextarea"></div></td>',
                 '</tr>',
                 '</table>',
+                '</td><td>',
+                // next col
+                '<table>',
+                '<tr>',
+                '<td><label for="emailfromadd">' + _("From address book") + '</label>',
+                '<span id="callout-fromaddresses" class="asm-callout">' + _("Comma separated list of extra addresses that the From email field of send email dialogs will prompt with") + '</span>',
+                '</td>',
+                '<td><textarea id="emailfromadd" rows="6" class="asm-textareafixeddouble" data="EmailFromAddresses" title="' + html.title(_("From address book")) + '"></textarea></td>',
+                '</tr>',
+                '<tr>',
+                '<td><label for="emailtoadd">' + _("To address book") + '</label>',
+                '<span id="callout-toaddresses" class="asm-callout">' + _("Comma separated list of extra addresses that the To and CC email fields of send email dialogs will prompt with") + '</span>',
+                '</td>',
+                '<td><textarea id="emailtoadd" rows="6" class="asm-textareafixeddouble" data="EmailToAddresses" title="' + html.title(_("To address book")) + '"></textarea></td>',
+                '</tr>',
+                '</table>',
+                // end
+                '</td></tr></table>',
                 '</div>'
             ].join("\n");
         },
